--- a/backend/config.example.yaml
+++ b/backend/config.example.yaml
@@ -38,26 +38,30 @@ scanner:
   whitelist: []
   blacklist: []
 strategy:
-  symbol: BNBUSDT
-  quote_size: 10.0
-  target_pct: 0.5
-  min_spread_pct: 0.0
-  cancel_timeout: 10.0
-  reorder_interval: 1.0
-  loop_sleep: 0.2
-  depth_level: 5
-  maker_fee_pct: 0.1
-  taker_fee_pct: 0.1
-  econ:
-    min_net_pct: 0.1
-  post_only: true
-  aggressive_take: false
-  aggressive_bps: 0.0
-  allow_short: false
-  status_poll_interval: 2.0
-  stats_interval: 30.0
-  ws_timeout: 2.0
-  bootstrap_on_idle: true
-  rest_bootstrap_interval: 3.0
-  plan_log_interval: 5.0
-  paper_cash: 1000
+  name: market_maker
+  market_maker:
+    symbol: BNBUSDT
+    quote_size: 10.0
+    target_pct: 0.5
+    min_spread_pct: 0.0
+    cancel_timeout: 10.0
+    reorder_interval: 1.0
+    loop_sleep: 0.2
+    depth_level: 5
+    maker_fee_pct: 0.1
+    taker_fee_pct: 0.1
+    econ:
+      min_net_pct: 0.1
+    post_only: true
+    aggressive_take: false
+    aggressive_bps: 0.0
+    allow_short: false
+    status_poll_interval: 2.0
+    stats_interval: 30.0
+    ws_timeout: 2.0
+    bootstrap_on_idle: true
+    rest_bootstrap_interval: 3.0
+    plan_log_interval: 5.0
+    paper_cash: 1000
+  trend_follow:
+    enabled: false
