--- a/backend/data/runtime_config.json
+++ b/backend/data/runtime_config.json
@@ -15,6 +15,7 @@
   "strategy": {
     "symbol": "DYMUSDT",
     "quote_size": 10.0,
+    "capital_usage": 1.0,
     "min_spread_pct": 0.0,
     "cancel_timeout": 10.0,
     "post_only": true,
