--- a/backend/config.example.yaml
+++ b/backend/config.example.yaml
@@ -27,10 +27,10 @@ scanner:
   enabled: false
   quote: USDT
   min_price: 0.0001
-  min_vol_usdt_24h: 3000000
+  min_vol_usdt_24h: 0
   top_by_volume: 120
   max_pairs: 60
-  min_spread_bps: 5.0
+  min_spread_bps: 0.0
   vol_bars: 0
   score:
     w_spread: 1.0
