--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,7 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "defaultProject": "amadeus",
   "projects": {
     "amadeus": {
       "projectType": "application",
@@ -35,7 +34,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "amadeus:build"
+            "buildTarget": "amadeus:build"
           }
         }
       }
