--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^20.2.3",
     "@angular/platform-browser-dynamic": "^20.2.3",
     "lightweight-charts": "^4.2.3",
-    "rxjs": "^7.8.1",
+    "rxjs": "^8.0.0-alpha.14",
     "tslib": "^2.6.2",
     "zone.js": "~0.15.0"
   },
@@ -33,6 +33,9 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "typescript": "~5.9.0"
+    "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
