--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
-fastapi==0.115.2
-uvicorn[standard]==0.30.6
+fastapi>=0.116.1
+uvicorn[standard]>=0.35.0
 python-binance==1.0.29
-pydantic==2.8.2
-pydantic-settings==2.4.0
+pydantic>=2.11.7
+pydantic-settings>=2.10.1
 PyYAML==6.0.2
-aiohttp==3.10.5
-async-timeout==4.0.3
-rich==13.8.0
-httpx>=0.27.0
-websockets>=10.4
-aiosqlite>=0.19.0
+aiohttp>=3.12.15
+async-timeout>=5.0.1
+rich>=14.1.0
+httpx>=0.28.1
+websockets>=15.0.1
+aiosqlite>=0.21.0
+
