--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^20.2.3",
     "@angular/platform-browser-dynamic": "^20.2.3",
     "lightweight-charts": "^4.2.3",
-    "rxjs": "^8.0.0-alpha.14",
+    "rxjs": "7.8.2",
     "tslib": "^2.6.2",
     "zone.js": "~0.15.0"
   },
