--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -17,7 +17,7 @@
             "polyfills": [],
             "tsConfig": "tsconfig.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
