--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --open --port 4400 --host 0.0.0.0",
     "build": "ng build",
     "lint": "eslint .",
-    "format": "prettier --write 'src/**/*.{ts,html,css}'"
+    "format": "prettier --write 'src/**/*.{ts,html,css,scss}'"
   },
   "dependencies": {
     "@angular/animations": "^20.2.3",
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
+    "sass": "^1.92.0",
     "typescript": "^5.9.2"
   },
   "engines": {
